--- a/index.html
+++ b/index.html
@@ -229,7 +229,21 @@
                                 <li class=""><a href="#">Politica</a></li>
                                 <li class=""><a href="#">Economia</a></li>
                                 <li class=""><a href="#">Cultura & Spettacolo</a></li>
-                                <li class=""><a href="#">Speciali</a></li>
+                                <li class="nav-section dropdown">
+                                    <a class="dropdown-toggle" href="#" role="button" id="special-dropdown" data-bs-toggle="dropdown" aria-expanded="false">Speciali</a>
+                                    <div class="dropdown-menu px-2" aria-labelledby="special-dropdown">
+                                        <a class="nav-section" href="#">QN Mobilità</a>
+                                        <a class="nav-section" href="#">Top Aziende</a>
+                                        <a class="nav-section" href="#">Cronisti in Classe</a>
+                                        <a class="nav-section" href="#">Premio Mascagni</a>
+                                        <a class="nav-section" href="#">Top 500 Bologna</a>
+                                        <a class="nav-section" href="#">Top 500 Romagna</a>
+                                        <a class="nav-section" href="#">Alfasigma</a>
+                                        <a class="nav-section" href="#">Distretti</a>
+                                        <a class="nav-section" href="#">Podcast</a>
+                                        <a class="nav-section" href="#">Teatri in regione</a>
+                                    </div>
+                                </li>     
                             </ul>
                         </ul>
 
@@ -276,14 +290,7 @@
                             <li class=""><a href="#">Politica</a></li>
                             <li class=""><a href="#">Economia</a></li>
                             <li class=""><a href="#">Cultura & Spettacolo</a></li>
-                            <li class="dropdown show">
-                                <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Speciali</a>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Another action</a>
-                                    <a class="dropdown-item" href="#">Something else here</a>
-                                </div>
-                            </li>
+                            <li class=""><a href="#">Speciali</a></li>
                         </ul>
                     </ul>
                     <ul class="nav-detail footer mobile-slider-nav p-2">
