--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <h4 class="col"><a href="#">Cosa Fare</a></h4>
                 <h4 class="col"><a href="#">Politica</a></h4>
                 <h4 class="col"><a href="#">Economia</a></h4>
-                <h4 class="col"><a href="#">Cultura e Spettacoli</h4>
+                <h4 class="col"><a href="#">Cultura e Spettacoli</a></h4>
                 <h4></h4>
             </div>
         </section>
@@ -67,10 +67,9 @@
                 <h4 class="col"><a href="#">Top 100 Ferrara</a></h4>
                 <h4 class="col"><a href="#">Top 100 Forlì-Cesena</a></h4>
                 <h4 class="col"><a href="#">Top 100 Rimini</a></h4>
-                <h4 class="col"><a href="#">Vivere Riccione</a></a></h4>
-                <h4 class="col"><a href="#"><a href="#">Confabitare</a></h4>
-                <h4 class="col"><a href="#">Vivere Carpi</h4>
-                <h4></h4>
+                <h4 class="col"><a href="#">Vivere Riccione</a></h4>
+                <h4 class="col"><a href="#">Confabitare</a></h4>
+                <h4 class="col"><a href="#">Vivere Carpi</a></h4>
             </div>
         </section>
         <section class="suggested-list container-fluid pt-2">
@@ -81,7 +80,7 @@
                 <h4 class="col"><a href="#">L'Immediato</a></h4>
                 <h4 class="col"><a href="#">LecceNews24</a></h4>
                 <h4 class="col"><a href="#">Quotidiano Piemontese</a></h4>
-                <h4 class="col"><a href="#">Senza Colonne News</h4>
+                <h4 class="col"><a href="#">Senza Colonne News</a></h4>
             </div>
         </section><section class="suggested-list container-fluid pt-2">
             <div class="grid-content row row-cols-2 row-cols-sm-4 row-cols-md-2">
@@ -99,7 +98,7 @@
                 <h4 class="col"><a href="#">Pinkitalia</a></h4>
                 <h4 class="col"><a href="#">Pronto Imprese</a></h4>
                 <h4 class="col"><a href="#">Ubitennis</a></h4>
-                <h4 class="col"><a href="#">Prodotti Migliori</h4>
+                <h4 class="col"><a href="#">Prodotti Migliori</a></h4>
             </div>
         </section>
 
