--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
                                 <li class=""><a href="#">Economia</a></li>
                                 <li class=""><a href="#">Cultura & Spettacolo</a></li>
                                 <li class="nav-section dropdown">
-                                    <a class="dropdown-toggle" href="#" role="button" id="special-dropdown" data-bs-toggle="dropdown" aria-expanded="false">Speciali</a>
-                                    <div class="dropdown-menu px-2" aria-labelledby="special-dropdown">
+                                    <a class="dropdown-toggle" href="#" role="button" id="special-dropdown-mobile" data-bs-toggle="dropdown" aria-expanded="false">Speciali</a>
+                                    <div class="dropdown-menu px-2" aria-labelledby="special-dropdown-mobile">
                                         <a class="nav-section" href="#">QN Mobilità</a>
                                         <a class="nav-section" href="#">Top Aziende</a>
                                         <a class="nav-section" href="#">Cronisti in Classe</a>
